--- a/README
+++ b/README
@@ -1,9 +1,34 @@
 # dots
 
-All the magic is contained in `install.sh`
+If all you want to do is install certain configs, use `install.sh`
 
 ```bash
 git clone https://github.com/alexdelifer/dots ~/dots
 cd ~/dots 
 ./install.sh bin i3 zsh
 ```
+or
+
+```bash
+# install all configs
+make install
+```
+
+If you're going to use `aconfmgr`, then just use that, the dotfiles are managed in `81-dotfiles.sh`
+
+```bash
+# install aconfmgr config
+./install.sh aconfmgr
+
+# check config vs running system
+make diff
+
+# save running system to aconfmgr
+make save
+
+# apply config to running system
+make apply
+```
+
+You can enable or disable different configs from the `02-config.sh` file.
+Use `01-default.sh` as a template.
